Cambios de estilos

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,213 @@
-/* Estilo personalizado para el contenido del cuerpo */
+/* Estilos generales para el cuerpo y la barra de navegación */
 body {
-    background-color: #343a40;
-    /* Color de fondo oscuro */
+    background: linear-gradient(to right, #4e54c8, #8f94fb);
+    /* Fondo con un degradado chulo */
     color: #ffffff;
-
     /* Texto blanco */
-    && a {
-        cursor: pointer;
-        text-decoration: none;
+    overflow-y: auto;
+}
+
+/* Nueva Estilización para la barra de navegación */
+nav {
+    background: linear-gradient(to right, #1e3c72, #2a5298);
+    /* Fondo con un degradado */
+    color: #ffffff;
+    /* Texto blanco */
+    padding: 15px;
+    border-bottom: 2px solid #ffffff;
+    /* Línea inferior blanca */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    /* Sutil sombra */
+}
+
+h1 {
+    display: inline;
+    margin-right: 20px;
+}
+
+#offcanvasNavbar {
+    background: linear-gradient(to right, #1e3c72, #2a5298);
+    color: #ffffff;
+}
+
+#offcanvasNavbar h4 {
+    color: #ffffff;
+}
+
+#offcanvasNavbar ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+
+#offcanvasNavbar li {
+    margin-right: 20px;
+}
+
+.botoneSinSesion,
+.botonesConSesion {
+    color: #ffffff;
+    text-decoration: none;
+    padding: 10px;
+    transition: background-color 0.3s;
+    border-radius: 5px;
+}
+
+.botoneSinSesion:hover,
+.botonesConSesion:hover {
+    background: linear-gradient(to right, #3f4c6b, #606c88);
+    /* Cambia el color de fondo al pasar el ratón */
+}
+
+/* Estilos para la lista de manualidades y el formulario de registro de manualidades */
+.custom-container {
+    margin-top: 12rem;
+    margin-bottom: 5rem;
+    background-color: #ffffff;
+    /* Fondo claro */
+    color: #333333;
+    /* Texto oscuro */
+    padding: 20px;
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.custom-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.custom-col {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.custom-list-group {
+    list-style: none;
+    padding: 0;
+}
+
+.custom-list-group-item {
+    background-color: #ffffff;
+    /* Fondo claro */
+    color: #333333;
+    /* Texto oscuro */
+    margin-bottom: 1rem;
+    border: 1px solid #dee2e6;
+    padding: 1rem;
+    border-radius: 5px;
+    transition: box-shadow 0.3s;
+}
+
+.custom-list-group-item h5 {
+    margin-bottom: 0.5rem;
+}
+
+.custom-list-group-item p {
+    margin-bottom: 0.25rem;
+}
+
+.custom-list-group-item button {
+    width: 100%;
+}
+
+.custom-list-group-item button.Eliminar-Manualidad {
+    background-color: #dc3545;
+    /* Fondo rojo */
+    color: #ffffff;
+    /* Texto blanco */
+}
+
+.custom-list-group-item button.Actualizar-Manualidad {
+    background-color: #28a745;
+    /* Fondo verde */
+    color: #ffffff;
+    /* Texto blanco */
+}
+
+.custom-list-group-item button:hover {
+    opacity: 0.8;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilos para el formulario de registro de paises */
+#manualidad-form-container {
+    background-color: #ffffff;
+    /* Fondo claro */
+    color: #333333;
+    /* Texto oscuro */
+    padding: 20px;
+    border: 1px solid #dee2e6;
+    border-radius: 10px;
+    margin-top: 12rem;
+    overflow-y: scroll;
+    /* Añade un scroll vertical cuando sea necesario */
+    max-height: 70vh;
+    /* Limita la altura máxima del contenedor al 70% de la altura visible */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.contenedor-datos label {
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    display: block;
+    max-width: 100%;
+    /* Ajusta la anchura máxima de las etiquetas */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* Agrega puntos suspensivos (...) para indicar que el texto está truncado */
+    white-space: nowrap;
+    /* Evita que el texto se divida en múltiples líneas */
+}
+
+.custom-form-control {
+    background-color: #f8f9fa;
+    /* Fondo claro para inputs */
+    color: #333333;
+    /* Texto oscuro */
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+    width: 100%;
+    padding: 10px;
+    /* Ajustado el espacio interno */
+    font-size: 1rem;
+    /* Ajustado el tamaño de fuente */
+    margin-bottom: 15px;
+    max-width: 100%;
+    /* Ajusta la anchura máxima del campo de entrada */
+    box-sizing: border-box;
+    /* Incluye el borde y el relleno en la anchura total */
+}
+
+.custom-btn-primary {
+    background-color: #007bff;
+    /* Fondo azul */
+    color: #ffffff;
+    /* Texto blanco */
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    /* Ajustado el espacio interno */
+    font-size: 1rem;
+    /* Ajustado el tamaño de fuente */
+    transition: background-color 0.3s;
+}
+
+.custom-btn-primary:hover {
+    background-color: #0056b3;
+    /* Cambia el color de fondo al pasar el ratón */
+    cursor: pointer;
+}
+
+/* Estilos responsivos */
+@media (max-width: 767px) {
+
+    .custom-form-label,
+    .custom-form-control,
+    .custom-btn-primary {
+        font-size: 1rem;
     }
 }
